Fix some placeholder wrapping

--- a/www/wip_new_website/static/repl.css
+++ b/www/wip_new_website/static/repl.css
@@ -8,8 +8,8 @@
 #repl-prompt {
     position: relative;
     left: 16px;
-    top: 25px;
-    line-height: 16px;
+    top: 1.25rem;
+    font-size: 1.25rem;
     height: 0;
     z-index: 2;
     font-family: var(--font-mono);
